k8s/hosped-gateway/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hosped-gateway-service
  namespace: default
spec:
  selector:
    app: hosped-gateway
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
